:sparkles: Update swagger settings
