# docs/swagger.json
@@ -15,7 +15,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/v1/db/document/create": {
+        "/api/v1/db/document/create/": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -51,7 +51,7 @@
                 }
             }
         },
-        "/api/v1/db/document/delete": {
+        "/api/v1/db/document/delete/": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -93,7 +93,7 @@
                 }
             }
         },
-        "/api/v1/db/document/read": {
+        "/api/v1/db/document/read/": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -129,7 +129,7 @@
                 }
             }
         },
-        "/api/v1/db/document/readall": {
+        "/api/v1/db/document/readall/": {
             "get": {
                 "produces": [
                     "application/json"
@@ -154,7 +154,7 @@
                 }
             }
         },
-        "/api/v1/db/document/update": {
+        "/api/v1/db/document/update/": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -179,6 +179,31 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.UpdateResult"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/ping/": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "APIの接続テスト",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Ping"
+                            }
                         }
                     },
                     "500": {
@@ -229,6 +254,14 @@
                 "insertedID": {
                     "description": "The _id of the inserted document. A value generated by the driver will be of type primitive.ObjectID.",
                     "type": "object"
+                }
+            }
+        },
+        "models.Ping": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         },
